# Power-Monitor-Desktop

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  power_reader.py  startup_task.py
scripts/: build.ps1  install_startup_task.ps1  uninstall_startup_task.ps1
tests/: test_config.py  test_main_window_settings.py  test_power_reader.py  test_startup_task.py
